<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f31c45">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="1dp"
        android:text="@string/BloodType"
        android:textAlignment="center"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="-3dp"
        android:text="@string/Phone"
        android:textAlignment="center"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="1dp"
        android:text="@string/Locality"
        android:textAlignment="center"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="157dp"
        android:text="@string/Name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/callbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="3dp"
        android:text="@string/CALL" />

    <Button
        android:id="@+id/cancelbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/callbutt"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="1dp"
        android:text="@string/CANCEL" />
</RelativeLayout>