<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_searchview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="opensource.celento.bloodbank.searchview">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="178dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="643dp"
        android:text="@string/Caption"
        android:textColor="#008000"
        tools:text="Caption" />

    <RelativeLayout
        android:id="@+id/rel13"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@string/desc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/search"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView4"
        tools:ignore="NotSibling" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="162dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="122dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="671dp"
            android:text="@string/SearchDonor"
            android:textSize="18sp" />
</RelativeLayout>
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="377dp"
        android:entries="@array/blood_type" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="341dp"
        android:text="@string/BloodGroup" />

    <RelativeLayout
        android:id="@+id/rel12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="384dp"
            android:layout_marginEnd="359dp"
            android:layout_marginBottom="508dp"
            android:text="@string/Locality" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="408dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="440dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="611dp"
            android:entries="@array/panch" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:background="#f31c45"
            android:text="@string/Search"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>
