<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="opensource.celento.bloodbank.MainActivity">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="169dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="192dp"
            android:layout_marginBottom="698dp"
            android:text="@string/Caption"
            android:textColor="#008000" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@+id/imageView3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/TODO"
            app:srcCompat="@drawable/user"
            tools:ignore="NotSibling" />

    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="122dp"
            android:layout_marginEnd="218dp"

            android:autofillHints="name"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView10"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="46dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="215dp"
            android:autofillHints="mobile"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText3"
            android:text="@string/Mobile" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="85dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="308dp"
            android:layout_marginEnd="325dp"
            android:text="@string/BloodType" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="413dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="373dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="319dp"
            android:ems="10"
            android:entries="@array/blood_type" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="247dp"
        android:text="@string/Locality" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="154dp"
        android:entries="@array/panch" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp"
        android:background="#f31c45"
        android:text="@string/ADD"
        android:textColor="#fff" />
    </LinearLayout>
</RelativeLayout>